# wasel-backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 435e3987290d_shipment_bidding_status_expiry_bids_.py  520fc3030094_shipment_special_handling_photo_url.py  5c45431e5f9e_procrastinate_schema.py  9df6dcd252d9_shipment_price_nullable_until_accept.py  cb9ed9380261_initial_schema.py
app/: config.py
app/cache/: base.py  helpers.py
app/core/: error_handlers.py  exceptions.py  security.py
app/db/: base.py
app/db/models/: __init__.py  _enums.py  _helpers.py  bid.py  capitan_profile.py  device.py  rating.py  saved_location.py  shipment.py  user.py
app/entrypoints/api/: auth.py  bids.py  deps.py  devices.py  events.py  health.py  main.py  saved_locations.py  shipments.py
app/integrations/: expo.py
app/jobs/: app.py
app/realtime/: notify.py  presence.py
app/schemas/: auth.py  base.py  bid.py  device.py  saved_location.py  shipment.py  users.py
app/services/auth/: auth_service.py
app/services/auth/otp/: dal.py  exceptions.py  rate_limit.py  results.py  security.py  service.py
app/services/devices/: dal.py  jobs.py  service.py
app/services/saved_locations/: dal.py  service.py
app/services/shipments/: dal.py  jobs.py  service.py
app/services/users/: dal.py  service.py
docs/: MVP.md  OTP.md  PRD.md  SHIPMENT.md
scripts/: _check_captain.py  _check_devices.py  _check_push.py  _check_shipments.py  _check_sse.py  _check_worker.py
